--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <body>
     <div>Hello dears</div>
     <p>let's play</p>
+
+    <h1>Terms and conditions</h1>
+    <p>ay kalam</p>
   </body>
 </html>
