--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>add new term</p>
     <p>new pull request 3shan Ahmed</p>
     <div>Hello dears how are you</div>
+    <div>Hello dears</div>
     <p>let's play a game</p>
   </body>
 </html>
