--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <p>ay kalam</p>
     <p>add new term</p>
     <p>new pull request 3shan Ahmed</p>
+    <div>Hello dears how are you</div>
+    <p>let's play a game</p>
   </body>
 </html>
