--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <div>Hello dears</div>
+    <div>Hello dears how are you</div>
     <p>let's play a game</p>
   </body>
 </html>
