--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <div>Hello dears</div>
+    <div>Hello dears nice to meet you</div>
     <p>let's play</p>
 
     <h1>Terms and conditions</h1>
