--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Terms and conditions</h1>
     <p>ay kalam</p>
     <p>add new term</p>
+    <p>new pull request 3shan Ahmed</p>
   </body>
 </html>
